Improve transform method to support multiple words